template/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alpine
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: alpine
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: alpine
        image: <REPO>/<PROJECT>:<VERSION>
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30 
          timeoutSeconds: 1
      nodeSelector:
        kops.k8s.io/instancegroup: tn_nodes
      imagePullSecrets:
        - name: myregistrykey
