template/svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: alpine
  namespace: tn
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
    env: stg
    product: tn
