template/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: alpine
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: alpine
