template/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alpine
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alpine1.dev.itshellws-k8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alpine
          servicePort: 80
  tls:
  - secretName: alpine-dev-tls
    hosts:
    - alpine1.dev.itshellws-k8s.com
